<resources>
    <string name="app_name">Автопоздравления</string>
    <string name="starbuzz_logo">Starbuzz logo</string>
    <string name="favorite">Поздравлять</string>
    <string name="favorites">Поздравляются</string>
    <string name="favoritesComing">Поздравляются в скором времени</string>
    <string-array name="options">
        <item>Drinks</item>
        <item>Food</item>
        <item>Stores</item>
    </string-array>

    <string name="hello_blank_fragment">Поздравления</string>
    <string name="base_work">Работа с БД</string>
    <string name="congratulations">Поздравления</string>
    <string name="congratulations_coming">Скорые поздравления</string>
    <string name="create_order_title">Create Order</string>
    <string name="action_share">Share</string>
    <string name="home_tab">Home</string>


    <string name="content_description_search">Что найти?</string>
    <string name="more">Первоначальная загрузка БД</string>
    <string name="content_description_more">что-то</string>
    <string name="work_bace">Список контактов</string>
    <string name="safe_text">Шаблоны поздравлений</string>
    <string name="null_text"> </string>


    <string name="exit">Выход</string>
    <string name="save_data">Сохранить данные?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="cancel">Отмена</string>
    <string name="saved">Сохранено</string>
    <string name="template_text_string">Шаблоны</string>
    <string name="contact_text_string">Контакты</string>
    <string name="search">Поиск</string>
    <string name="sort_ab">Сортировка</string>

    <string-array name="congratulations_templates">
        <item>Поздравляю с днем рождения! Пусть жизнь дарит тебе побольше ярких моментов и сбудутся все твои самые смелые и заветные желания! Желаю, чтобы в твоем доме всегда царили счастье и понимание. И пусть тебя окружают только искренние, верные, надежные друзья и добрые люди!</item>
        <item>С днем рождения! Желаю крепкого здоровья, удачи, благополучия, добра, радости, любви, счастья, хорошего настроения, улыбок, ярких впечатлений. Пусть тепло и уют всегда наполняют твой дом, пусть солнечный свет согревает в любую погоду, а желания исполняются при одной мысли о них.</item>
        <item>От всей души поздравляю Вас с днем рождения! Желаю, чтобы не только сегодня, но и каждый Ваш день был наполнен радостными и светлыми чувствами, чтобы здоровье было крепким, а все мечты превращались в планы и обязательно сбывались. Благополучия Вам, счастья и достатка!</item>
        <item>С днем рождения! Пусть каждый день приносит радость, улыбки и подарки, пусть все мечты исполняются, а планы реализуются, пусть окружают только искренние люди, преданные друзья, и пусть не будет места для уныния и печалей!</item>
        <item>Прими мои поздравления с днем рождения! В твой лучший день хочу пожелать самого лучшего, чтобы в жизни было как можно больше хороших эмоций, приятных моментов и постоянного круговорота позитивных событий. Чтобы окружали только любимые, родные, дорогие сердцу люди. Чтобы во всем сопутствовал успех и везение. Ты этого заслуживаешь!</item>
        <item>Поздравляю с днем рождения! Удачи тебе во всех начинаниях, исполнения желаний, всегда светлого и хорошего настроения, веры в себя и продвижения к своим целям. А еще прекрасного здоровья, больше улыбок и в праздники, и в будни, и пусть каждый день будет наполнен счастьем и теплом.</item>
        <item>Поздравляю с днем рождения! Желаю, чтобы вся жизнь была полна радости, счастья, здоровья, улыбок, любви и приятных сюрпризов. Пусть удача станет неотъемлемым спутником, а во всех начинаниях всегда сопутствует только успех. Больше силы, чувств и смелости, чтобы сбывались даже самые необычные желания!</item>
        <item>Поздравляю с Днём рождения! Желаю тебе хорошего настроения, огромного счастья, бесконечной любви, достатка в семье, карьерного роста, хороших друзей и, конечно же, здоровья тебе и всем, кто тебе дорог. Пусть мечты никогда не покидают тебя и превращаются в реальность.</item>
        <item>Поздравляю с днем рождения! Пусть все мечты сбываются, желания исполняются, цели достигаются, здоровье улучшается и деньги прибавляются! Счастья, радости и душевной гармонии, блистательных удач, незабываемых впечатлений и головокружительных успехов, настоящей любви, верных друзей и яркой радуги эмоций!</item>
        <item>Поздравляю с днем рождения! Кроме стандартных пожеланий — счастья, здоровья и всего наилучшего — я желаю, чтобы сбывались все мечты, чтобы каждый день приносил много приятных неожиданностей, чтобы Вас окружали только добрые и нужные люди. А еще везения. Везения во всём и всегда. И чтобы каждое начатое дело заканчивалось успешно!</item>
        <item>С днем рождения! Пусть жизнь будет беспрерывным потоком счастливых дней и прекрасных мгновений. Желаю назад оглядываться только лишь с хорошими воспоминаниями, вперёд смотреть с уверенностью в собственных силах и доброй надеждой, а в настоящем всегда оставаться замечательным человеком с любящим сердцем и открытой душой!</item>
        <item>С днем рождения! Ты прекрасный человек, и я от всей души желаю тебе как можно больше счастливых моментов, море любви, безграничного здоровья тебе и твоим родным и только любящих и надежных людей рядом! Пусть гармония и удача станут твоими повседневными спутниками, и все всегда получается легко и непринужденно!</item>
        <item>С днем рождения!</item>
    </string-array>

</resources>